--- a/index.html
+++ b/index.html
@@ -351,6 +351,7 @@
       }
 
       .small-btn {
+        font-family: "Vazirmatn";
         flex: 1;
         padding: 10px;
         background: rgba(255, 255, 255, 0.05);
@@ -2992,4 +2993,5 @@
     </script>
   </body>
 </html>
+
 
